--- a/.github/workflows/security-guard.yml
+++ b/.github/workflows/security-guard.yml
@@ -25,10 +25,12 @@ jobs:
 
       # --- OPEN SOURCE THE SCANS ---
       # The python script generated .sarif files in target-repo directory
+      # Note: SARIF upload requires GitHub Advanced Security (GHAS) to be enabled
 
       - name: Upload Semgrep Results
         uses: github/codeql-action/upload-sarif@v3
         if: always()
+        continue-on-error: true
         with:
           sarif_file: target-repo/semgrep.sarif
           category: semgrep
@@ -36,6 +38,7 @@ jobs:
       - name: Upload Trivy Results
         uses: github/codeql-action/upload-sarif@v3
         if: always()
+        continue-on-error: true
         with:
           sarif_file: target-repo/trivy.sarif
           category: trivy
